Fix T53547: Metaballs as dupli objects are not updated with the new Depsgraph

Follow relations from old dependency graph.